--- a/services/arena-manager/package.json
+++ b/services/arena-manager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typearena-api",
+  "name": "arena-manager",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
