Change incorrect input handling. Add reducer tests.

--- a/services/arena-ui/package.json
+++ b/services/arena-ui/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "classnames": "^2.2.6",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -35,8 +36,14 @@
     "test": "./node_modules/jest/bin/jest.js "
   },
   "jest": {
-    "moduleFileExtensions": ["js", "jsx"],
-    "moduleDirectories": ["node_modules", "src"],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
     "moduleNameMapper": {
       "^components$": "<rootDir>/src/components",
       "^actions$": "<rootDir>/src/actions",
