--- a/services/arena-ui/package.json
+++ b/services/arena-ui/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "node-sass": "^4.11.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
@@ -21,6 +21,7 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.1",
+    "eslint-plugin-react-hooks": "0.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "regenerator-runtime": "^0.13.1",
