eslint babel parser

--- a/services/arena-ui/.eslintrc.json
+++ b/services/arena-ui/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "rules": {
-      "react-hooks/rules-of-hooks": "error"
+      "react-hooks/rules-of-hooks": "error",
+      "strict": 0
     },
     "plugins": [
       "react-hooks"
