--- a/services/arena-manager/package.json
+++ b/services/arena-manager/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.0.4",
     "nodemon": "^1.18.9",
     "webpack": "^4.28.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
