--- a/services/typearena-api/package.json
+++ b/services/typearena-api/package.json
@@ -16,7 +16,8 @@
     "express-session": "^1.15.6",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
