--- a/services/arena-ui/package.json
+++ b/services/arena-ui/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.14.6",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
